--- a/ThoughtShare/app/views/thinkers/_form.html.erb
+++ b/ThoughtShare/app/views/thinkers/_form.html.erb
@@ -20,7 +20,12 @@
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div>
-  
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>  
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
