--- a/ThoughtShare/app/views/thoughts/thumbers.erb
+++ b/ThoughtShare/app/views/thoughts/thumbers.erb
@@ -14,6 +14,8 @@
 <!--Display thinkers who 'thumb'-ed this thought -->
 <h2>
   "Thumbers of this thought"
+  <%= @thought.thinker.name %>
+
 </h2>
 
 <%= link_to 'Back', thoughts_path %>
